[package]
name = "impl-pass-hir"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = '*'
core-hir = { path = '../core-hir' }
core-tokens = { path = '../core-tokens' }
lib-arena = { path = '../lib-arena' }
lib-peek = { path = '../lib-peek', features = ['core-tokens'] }