[package]
name = "impl-pass-mir"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-tokens = { path = '../core-tokens' }
core-hir = {  path = '../core-hir' }
core-mir = {  path = '../core-mir' }
core-types = {  path = '../core-types' }

lib-smallvec = { path = '../lib-smallvec' }
lib-arena = {  path = '../lib-arena' }
lib-intern = {  path = '../lib-intern' }

vec-utils = '*'