[package]
name = "interp-mir"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl-pass-mir = { path = '../impl-pass-mir' }
core-mir = {  path = '../core-mir' }
core-types = {  path = '../core-types' }